// Copyright (c) 2026 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.daml.ledger.api.v2;

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Com.Daml.Ledger.Api.V2";
option java_outer_classname = "OffsetCheckpointOuterClass";
option java_package = "com.daml.ledger.api.v2";

// OffsetCheckpoints may be used to:
//
// - detect time out of commands.
// - provide an offset which can be used to restart consumption.
message OffsetCheckpoint {
  // The participant's offset, the details of the offset field are described in ``community/ledger-api/README.md``.
  // Required, must be a valid absolute offset (positive integer).
  int64 offset = 1;
  repeated SynchronizerTime synchronizer_times = 2;
}

message SynchronizerTime {
  // The id of the synchronizer.
  // Required
  string synchronizer_id = 1;
  // All commands with a maximum record time below this value MUST be considered lost if their completion has not arrived before this checkpoint.
  // Required
  google.protobuf.Timestamp record_time = 2;
}
